<resources>
    <string name="app_name">DTSharing</string>
    <string name="notEmpty">Darf nicht leer sein</string>
    <string name="start">Von</string>
    <string name="destination">Nach</string>
    <string name="mail">E-Mail</string>
    <string name="descForgotPassword">Durch die Angabe deiner E-Mail Adresse kannst du einen Link anfordern, mit dem du dein Passwort zurücksetzen lassen kannst</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="male">Männlich</string>
    <string name="female">Weiblich</string>
    <string name="birthYear">Geburtsjahr</string>
    <string name="password">Kennwort</string>
    <string name="passwordSignup">Kennwort (mind. 6 Zeichen)</string>
    <string name="passwordRepeat">Kennwort wiederholen</string>
    <string name="ticket_prompt">Ich besitze&#8230;</string>
</resources>