<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="de.dtsharing.dtsharing.Suchmaske"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svContainer">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            cardView:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_place_lightgrey_24dp"
                        android:layout_marginRight="16dp"
                        android:gravity="center" />

                    <AutoCompleteTextView
                        android:id="@+id/etDeparture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start"
                        android:singleLine="true">
                    </AutoCompleteTextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_flag_lightgrey_24dp"
                        android:layout_marginRight="16dp"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <AutoCompleteTextView
                        android:id="@+id/etTarget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/destination"
                        android:singleLine="true">
                    </AutoCompleteTextView>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            cardView:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".8"
                    android:paddingRight="24dp"
                    android:gravity="center|start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_date_lightgrey_24dp"
                        android:id="@+id/textView3"
                        android:layout_marginRight="16dp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/etDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:focusable="false"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:gravity="center|end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_clock_lightgrey_24dp"
                        android:id="@+id/textView5"
                        android:layout_marginRight="16dp"
                        android:gravity="center" />

                    <EditText
                        android:id="@+id/etTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textAlignment="center"
                        android:inputType="none"
                        android:focusable="false"
                        android:singleLine="true" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            cardView:cardCornerRadius="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:drawableStart="@drawable/ic_ticket_lightgrey_24dp"
                    android:id="@+id/tvTicket"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:id="@+id/spTicket"
                    android:spinnerMode="dialog"
                    android:prompt="@string/ticket_prompt"
                    android:entries="@array/ticket_spinner"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/bSubmit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="SUCHEN"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:background="@drawable/button_primary_style"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Verlauf"
            android:id="@+id/textView9"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="14sp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            cardView:cardCornerRadius="2dp">
            <de.dtsharing.dtsharing.NonScrollListView
                android:id="@+id/lvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/list_divider_default"
                android:dividerHeight="1dp">

            </de.dtsharing.dtsharing.NonScrollListView>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
